--- a/package.json
+++ b/package.json
@@ -3,4 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "repository": { "type": "git", "url": "git+https://github.com/MasGaNo/FSEventDispatcher.git" },
+  "dependencies": {
+  }
 }
