--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "FSEventDispatcher",
   "version": "0.2.0",
   "description": "FSEventDispatcher, class of event management of Fantasite.JS",
-  "main": "src/library/event/eventdispatcher.js",
-  "typings": "src/library/event/eventdispatcher.d.ts",
+  "main": "./src/library/event/eventdispatcher.js",
+  "types": "./src/library/event/eventdispatcher.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MasGaNo/FSEventDispatcher.git"
