--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "FSEventDispatcher",
+  "name": "fseventdispatcher",
   "version": "0.2.0",
   "description": "FSEventDispatcher, class of event management of Fantasite.JS",
   "main": "./src/library/event/eventdispatcher.js",
-  "typings": "./src/library/event/eventdispatcher",
+  "types": "./src/library/event/eventdispatcher.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MasGaNo/FSEventDispatcher.git"
