--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "noImplicitAny": true,
-        "module": "umd",
+        "module": "commonjs",
         "sourceMap": true,
         "outDir": "./dist",
         "declaration": true,
