--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
     "compilerOptions": {
         "target": "es5",
         "noImplicitAny": true,
-        "module": "commonjs",
+        "module": "umd",
         "sourceMap": true,
         "outDir": "./dist",
         "declaration": true,
-        "removeComments": false
+        "removeComments": false,
+        "lib": [
+            "es6"
+        ]
     },
     "files": [
         "src/library/event/eventdispatcher.ts"
