--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ES5",
         "noImplicitAny": true,
         "module": "umd",
         "sourceMap": true,
-        "outDir": "./dist",
         "declaration": true,
         "removeComments": false,
-        "rootDir": "./src",
+        "outDir": "./dist",                        /* Redirect output structure to the directory. */
+        "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         "lib": [
-            "es6"
+            "ESNext"
         ]
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "dist"
     ]
 }
