--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES5",
         "noImplicitAny": true,
-        "module": "umd",
+        "module": "CommonJS",
         "sourceMap": true,
         "declaration": true,
         "removeComments": false,
